[rd-editor] IJPL-185748 IJPL-191314 Frontend speculative undo/redo
GitOrigin-RevId: d0a1a36b031ce32c6bcffb206fb88fc9acf104bd